--- a/action.yml
+++ b/action.yml
@@ -79,8 +79,8 @@ inputs:
     default: "linux64"
     required: false
   polaris_version:
-    description: "What version of Polaris thin client is needed, example: 2022.9.0 (Default)"
-    default: 2022.9.0
+    description: "What version of Polaris thin client is needed, example: 2024.6.0 (Default)"
+    default: 2024.6.0
     required: false
 
   #------------Nextgen Polaris related inputs------------------------#
@@ -294,12 +294,11 @@ runs:
     # If event is pull request and it is accepted and merged -> run full scan. All other events will run RAPID scan
     - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true}}
       name: Black Duck Analysis with synopsys-action
-      uses: synopsys-sig/synopsys-action@v1.9.0
+      uses: synopsys-sig/synopsys-action@v1.11.0
       with:
         blackduck_token: ${{ inputs.blackduck_token }}
         blackduck_url: ${{ inputs.blackduck_url }}
         blackduck_scan_full: true
-        github_token: ${{ inputs.github_token }} # Mandatory when blackduck_automation_prcomment is set to 'true'
         blackduck_scan_failure_severities: ${{ inputs.blackduck_scan_failure_severities }}
         synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
         synopsys_bridge_download_version: ${{inputs.bridge_version}}
@@ -324,13 +323,15 @@ runs:
       continue-on-error: true
 
     # If event is pull request and it is accepted and merged -> run full scan. All other events will run RAPID scan
-    - if: ${{inputs.blackduck == 'true' && github.event_name != 'pull_request'}}
+    - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request' && github.event.action != 'closed' && github.event.pull_request.merged == 'false'}}
       name: Black Duck Analysis with synopsys-action
-      uses: synopsys-sig/synopsys-action@v1.9.0
+      uses: synopsys-sig/synopsys-action@v1.11.0
       with:
         blackduck_token: ${{ inputs.blackduck_token }}
         blackduck_url: ${{ inputs.blackduck_url }}
         blackduck_scan_full: false
+        blackduck_prcomment_enabled: ${{ inputs.blackduck_prComment_enabled }} 
+        github_token: ${{ inputs.github_token }} # Mandatory when blackduck_automation_prcomment is set to 'true'
         blackduck_scan_failure_severities: ${{ inputs.blackduck_scan_failure_severities }}
         synopsys_bridge_install_directory: ${{inputs.bridge_install_folder}}
         synopsys_bridge_download_version: ${{inputs.bridge_version}}
@@ -364,7 +365,7 @@ runs:
         blackduck_log_level: ${{ inputs.log_level }}
         blackduck_policy_categories: ${{ inputs.blackduck_policy_categories }}
 
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name != 'pull_request'}}
+    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name == 'pull_request' && github.event.action != 'closed' && github.event.pull_request.merged == 'false'}}
       uses: synopsys-sig-community/blackduck-sarif-formatter@dev
       with:
         blackduck_url: ${{ inputs.blackduck_url }}
@@ -379,27 +380,13 @@ runs:
         blackduck_log_level: ${{ inputs.log_level }}
         blackduck_policy_categories: ${{ inputs.blackduck_policy_categories }}
 
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true'}}
+    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name == 'pull_request'}}
       name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v3
       with:
         sarif_file: blackduck-sarif.json
       continue-on-error: true
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == 'true'}}
-      name: Archive scanning results
-      uses: actions/upload-artifact@v3
-      with:
-        name: bd-scan-results
-        path: blackduck-sarif.json
-      continue-on-error: true
-
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name != 'pull_request'}}
-      name: Upload SARIF file
-      uses: github/codeql-action/upload-sarif@v3
-      with:
-        sarif_file: blackduck-sarif.json
-      continue-on-error: true
-    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name != 'pull_request'}}
+    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name == 'pull_request'}}
       name: Archive scanning results
       uses: actions/upload-artifact@v3
       with:
@@ -409,7 +396,7 @@ runs:
     #------------Cloud Native Coverity Analysis------------------------#
     - if: ${{inputs.cnc == 'true'}}
       name: CNC Analysis with synopsys-action
-      uses: synopsys-sig/synopsys-action@v1.9.0
+      uses: synopsys-sig/synopsys-action@v1.11.0
       with:
         coverity_url: ${{ inputs.cnc_url }}
         coverity_user: ${{ inputs.cnc_username }}
@@ -445,7 +432,7 @@ runs:
     #------------Nextgen Polaris ------------------------#
     - if: ${{inputs.polaris_nextgen == 'true'}}
       name: Nextgen Polaris Analysis with synopsys-action
-      uses: synopsys-sig/synopsys-action@v1.9.0
+      uses: synopsys-sig/synopsys-action@v1.11.0
       with:
           polaris_serverUrl: ${{ inputs.polaris_nextgen_url }}
           polaris_accessToken: ${{ inputs.polaris_nextgen_token  }}
