--- a/action.yml
+++ b/action.yml
@@ -297,7 +297,7 @@ runs:
       run: |
         file_count=$(find ${{github.workspace}} -name requirements.txt | wc -l)
         if [[ $file_count -gt 0 ]]; then
-          pip3 install -r requirements.txt
+          pip install -r requirements.txt
         fi        
         file_count=$(find ${{github.workspace}} -name package.json | wc -l)
         if [[ $file_count -gt 0 ]]; then
@@ -324,6 +324,7 @@ runs:
         DETECT_DETECTOR_SEARCH_CONTINUE: "true"
         DETECT_EXCLUDED_DIRECTORIES_SEARCH_DEPTH: "20"
         DETECT_EXCLUDED_DIRECTORIES: node_modules,detect
+        DETECT_PUB_DEPENDENCY_TYPES_EXCLUDE: DEV #This will exclude Dart dev dependencies
         DETECT_NPM_DEPENDENCY_TYPES_EXCLUDED: DEV
         DETECT_TOOLS: "ALL,IAC_SCAN" #All is not activating IaC scan, it needs to be activate separately with IAC_SCAN
         DETECT_BLACKDUCK_SIGNATURE_SCANNER_COPYRIGHT_SEARCH: "true"
@@ -352,6 +353,7 @@ runs:
         DETECT_DETECTOR_SEARCH_CONTINUE: "true"
         DETECT_EXCLUDED_DIRECTORIES_SEARCH_DEPTH: "20"
         DETECT_EXCLUDED_DIRECTORIES: node_modules,detect
+        DETECT_PUB_DEPENDENCY_TYPES_EXCLUDE: DEV
         DETECT_NPM_DEPENDENCY_TYPES_EXCLUDED: DEV
         DETECT_TOOLS: "ALL,IAC_SCAN" #All is not activating IaC scan, it needs to be activate separately with IAC_SCAN
         DETECT_BLACKDUCK_SIGNATURE_SCANNER_COPYRIGHT_SEARCH: "true"
@@ -383,11 +385,27 @@ runs:
         DETECT_DETECTOR_SEARCH_CONTINUE: "true"
         DETECT_EXCLUDED_DIRECTORIES_SEARCH_DEPTH: "20"
         DETECT_EXCLUDED_DIRECTORIES: node_modules,detect
+        DETECT_PUB_DEPENDENCY_TYPES_EXCLUDE: DEV
         DETECT_NPM_DEPENDENCY_TYPES_EXCLUDED: DEV
         DETECT_BLACKDUCK_RAPID_COMPARE_MODE: ${{inputs.blackduck_rapid_compare_mode}} #Options are ALL (default), BOM_COMPARE_STRICT and BOM_COMPARE
       continue-on-error: true
 
     - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true}}
+      uses: synopsys-sig-community/blackduck-sarif-formatter@dev
+      with:
+        blackduck_url: ${{ inputs.blackduck_url }}
+        blackduck_project: ${{ inputs.blackduck_project }}
+        blackduck_version: ${{inputs.blackduck_version}}
+        blackduck_apiToken: ${{ inputs.blackduck_token }}
+        blackduck_scan_full: true
+        blackduck_outputFile: ${{github.workspace}}/blackduck-sarif.json
+        blackduck_scanOutputPath: "${{github.workspace}}/.bridge/\"Blackduck Detect Execution\"/detect"
+        blackduck_policies: ${{ inputs.blackduck_policies }}
+        blackduck_iac: ${{ inputs.blackduck_iac }}
+        blackduck_log_level: ${{ inputs.log_level }}
+        blackduck_policy_categories: ${{ inputs.blackduck_policy_categories }}
+
+    - if: ${{inputs.blackduck == 'true' && github.event_name != 'pull_request'}}
       uses: synopsys-sig-community/blackduck-sarif-formatter@dev
       with:
         blackduck_url: ${{ inputs.blackduck_url }}
