--- a/action.yml
+++ b/action.yml
@@ -317,13 +317,15 @@ runs:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
         DETECT_PROJECT_VERSION_NAME: ${{inputs.blackduck_version}}
         DETECT_CODE_LOCATION_NAME: ${{inputs.blackduck_project}}_${{inputs.blackduck_version}}
-        DETECT_SCAN_OUTPUT_PATH: "${{github.workspace}}/.bridge/\"Blackduck Detect Execution\"/detect" # This needs to be set, because of RAPID scan results
+        DETECT_SCAN_OUTPUT_PATH: "${{github.workspace}}/.bridge" # This needs to be set, because of RAPID scan results
+        DETECT_OUTPUT_PATH: "${{github.workspace}}/.bridge" # This needs to be set, because of RAPID scan results
+        DETECT_BDIO_OUTPUT_PATH: "${{github.workspace}}/.bridge"
         DETECT_CLEANUP: "false" # This needs to be set, because of RAPID scan results
         DETECT_TIMEOUT: "7200"
         DETECT_DETECTOR_SEARCH_DEPTH: "20"
         DETECT_DETECTOR_SEARCH_CONTINUE: "true"
         DETECT_EXCLUDED_DIRECTORIES_SEARCH_DEPTH: "20"
-        DETECT_EXCLUDED_DIRECTORIES: node_modules,detect
+        DETECT_EXCLUDED_DIRECTORIES: node_modules,detect,.bridge
         DETECT_PUB_DEPENDENCY_TYPES_EXCLUDE: DEV
         DETECT_NPM_DEPENDENCY_TYPES_EXCLUDED: DEV
         DETECT_TOOLS: "ALL,IAC_SCAN" #All is not activating IaC scan, it needs to be activate separately with IAC_SCAN
@@ -350,12 +352,14 @@ runs:
         DETECT_PROJECT_VERSION_NAME: ${{github.base_ref}}
         DETECT_CODE_LOCATION_NAME: ${{inputs.blackduck_project}}_${{inputs.blackduck_version}}
         DETECT_SCAN_OUTPUT_PATH: "${{github.workspace}}/.bridge/\"Blackduck Detect Execution\"/detect" # This needs to be set, because of RAPID scan results
+        DETECT_OUTPUT_PATH: "${{github.workspace}}/.bridge" # This needs to be set, because of RAPID scan results
+        DETECT_BDIO_OUTPUT_PATH: "${{github.workspace}}/.bridge"
         DETECT_CLEANUP: "false" # This needs to be set, because of RAPID scan results
         DETECT_TIMEOUT: "7200"
         DETECT_DETECTOR_SEARCH_DEPTH: "20"
         DETECT_DETECTOR_SEARCH_CONTINUE: "true"
         DETECT_EXCLUDED_DIRECTORIES_SEARCH_DEPTH: "20"
-        DETECT_EXCLUDED_DIRECTORIES: node_modules,detect
+        DETECT_EXCLUDED_DIRECTORIES: node_modules,detect,.bridge
         DETECT_PUB_DEPENDENCY_TYPES_EXCLUDE: DEV
         DETECT_NPM_DEPENDENCY_TYPES_EXCLUDED: DEV
         DETECT_BLACKDUCK_RAPID_COMPARE_MODE: ${{inputs.blackduck_rapid_compare_mode}} #Options are ALL (default), BOM_COMPARE_STRICT and BOM_COMPARE
@@ -370,7 +374,7 @@ runs:
         blackduck_apiToken: ${{ inputs.blackduck_token }}
         blackduck_scan_full: true
         blackduck_outputFile: ${{github.workspace}}/blackduck-sarif.json
-        blackduck_scanOutputPath: "${{github.workspace}}/.bridge/\"Blackduck Detect Execution\"/detect"
+        blackduck_scanOutputPath: "${{github.workspace}}/.bridge"
         blackduck_policies: ${{ inputs.blackduck_policies }}
         blackduck_iac: ${{ inputs.blackduck_iac }}
         blackduck_log_level: ${{ inputs.log_level }}
@@ -383,7 +387,7 @@ runs:
         blackduck_apiToken: ${{ inputs.blackduck_token }}
         blackduck_scan_full: false
         blackduck_outputFile: ${{github.workspace}}/blackduck-sarif.json
-        blackduck_scanOutputPath: "${{github.workspace}}/.bridge/\"Blackduck Detect Execution\"/detect"
+        blackduck_scanOutputPath: "${{github.workspace}}/.bridge"
         blackduck_policies: ${{ inputs.blackduck_policies }}
         blackduck_iac: ${{ inputs.blackduck_iac }}
         blackduck_log_level: ${{ inputs.log_level }}
