commented out detect paths

--- a/action.yml
+++ b/action.yml
@@ -317,9 +317,9 @@ runs:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
         DETECT_PROJECT_VERSION_NAME: ${{inputs.blackduck_version}}
         DETECT_CODE_LOCATION_NAME: ${{inputs.blackduck_project}}_${{inputs.blackduck_version}}
-        DETECT_SCAN_OUTPUT_PATH: "${{github.workspace}}/.bridge" # This needs to be set, because of RAPID scan results
-        DETECT_OUTPUT_PATH: "${{github.workspace}}/.bridge" # This needs to be set, because of RAPID scan results
-        DETECT_BDIO_OUTPUT_PATH: "${{github.workspace}}/.bridge"
+        # DETECT_SCAN_OUTPUT_PATH: "${{github.workspace}}/.bridge" # This needs to be set, because of RAPID scan results
+        # DETECT_OUTPUT_PATH: "${{github.workspace}}/.bridge" # This needs to be set, because of RAPID scan results
+        # DETECT_BDIO_OUTPUT_PATH: "${{github.workspace}}/.bridge"
         DETECT_CLEANUP: "false" # This needs to be set, because of RAPID scan results
         DETECT_TIMEOUT: "7200"
         DETECT_DETECTOR_SEARCH_DEPTH: "20"
@@ -351,9 +351,9 @@ runs:
         DETECT_PROJECT_NAME: ${{inputs.blackduck_project}}
         DETECT_PROJECT_VERSION_NAME: ${{github.base_ref}}
         DETECT_CODE_LOCATION_NAME: ${{inputs.blackduck_project}}_${{inputs.blackduck_version}}
-        DETECT_SCAN_OUTPUT_PATH: "${{github.workspace}}/.bridge" # This needs to be set, because of RAPID scan results
-        DETECT_OUTPUT_PATH: "${{github.workspace}}/.bridge" # This needs to be set, because of RAPID scan results
-        DETECT_BDIO_OUTPUT_PATH: "${{github.workspace}}/.bridge"
+        # DETECT_SCAN_OUTPUT_PATH: "${{github.workspace}}/.bridge" # This needs to be set, because of RAPID scan results
+        # DETECT_OUTPUT_PATH: "${{github.workspace}}/.bridge" # This needs to be set, because of RAPID scan results
+        # DETECT_BDIO_OUTPUT_PATH: "${{github.workspace}}/.bridge"
         DETECT_CLEANUP: "false" # This needs to be set, because of RAPID scan results
         DETECT_TIMEOUT: "7200"
         DETECT_DETECTOR_SEARCH_DEPTH: "20"
