--- a/action.yml
+++ b/action.yml
@@ -300,7 +300,7 @@ runs:
         echo "github.base_ref: ${{github.base_ref}}"
       shell: bash      
     #------------Black Duck ------------------------#
-    - if: ${{inputs.blackduck == 'true'}}
+    - if: ${{inputs.blackduck == 'true' && github.event_name == 'pull_request'}}
       name: Install Pip and npm requirements
       run: |
         file_count=$(find ${{github.workspace}} -name requirements.txt | wc -l)
@@ -401,7 +401,14 @@ runs:
       name: Upload SARIF file
       uses: github/codeql-action/upload-sarif@v3
       with:
-        sarif_file: blackduck-sarif.json
+        sarif_file: ${{github.workspace}}/blackduck-sarif.json
+      continue-on-error: true
+    - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name == 'pull_request'}}
+      name: Archive scanning results
+      uses: actions/upload-artifact@v3
+      with:
+        name: bd-scan-results
+        path: ${{github.workspace}}/blackduck-sarif.json
       continue-on-error: true
     #------------Cloud Native Coverity Analysis------------------------#
     - if: ${{inputs.cnc == 'true'}}
