added sha to sarif upload

--- a/action.yml
+++ b/action.yml
@@ -403,6 +403,7 @@ runs:
       with:
         sarif_file: ${{github.workspace}}/blackduck-sarif.json
         ref: ${{github.head_ref}}
+        sha: ${{ github.sha }}
       continue-on-error: true
     - if: ${{inputs.blackduck == 'true' && inputs.blackduck_sarif == 'true' && github.event_name == 'pull_request'}}
       name: Archive scanning results
