--- a/action.yml
+++ b/action.yml
@@ -481,7 +481,7 @@ runs:
           polaris_reports_sarif_severities: "CRITICAL,HIGH,MEDIUM,LOW" #Critical, High, Medium, Low, and Informational, Default: All severities are included.
           polaris_reports_sarif_groupSCAIssues: false 
           polaris_reports_sarif_issue_types: 'SCA, SAST' 
-          polaris_upload_sarif_report: true 
+          polaris_upload_sarif_report: ${{inputs.polaris_nextgen_sarif}} 
           github_token: ${{ inputs.github_token }}  # Required when polaris_upload_sarif_report is set as true
       env:
         DETECT_ACCURACY_REQUIRED: NONE  
